# Slide-Editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
include/: CommandFactory.hpp
include/commands/: Commands.hpp
include/core/: Shape.hpp  Slide.hpp  SlideFactory.hpp  SlideRepository.hpp
include/error/: Error.hpp
include/interfaces/: ICommand.hpp  ISerializer.hpp  IShape.hpp  ISlideRepository.hpp
include/parser/: Lexer.hpp  Parser.hpp  Token.hpp  Tokenizer.hpp
include/serialization/: JsonSerializer.hpp
modules/controller/: CMakeLists.txt
modules/controller/include/controller/: CommandContext.hpp  CommandController.hpp  CommandHistory.hpp  CommandRegistry.hpp  InputHandler.hpp  MetaCommand.hpp
modules/controller/include/controller/commands/: CommandFactory.hpp  Commands.hpp  HistoryCommands.hpp  MetaCommandDefinitions.hpp  UndoableCommands.hpp
modules/controller/include/controller/parser/: CommandParser.hpp  Lexer.hpp  LexerState.hpp  Token.hpp
modules/controller/src/: CommandContext.cpp  CommandController.cpp  CommandHistory.cpp  CommandRegistry.cpp  InputHandler.cpp  MetaCommand.cpp
modules/controller/src/commands/: CommandFactory.cpp  Commands.cpp  HisotryCommands.cpp  HistoryCommands.cpp  MetaCommandDefinitions.cpp  UndoableCommands.cpp
modules/controller/src/parser/: CommandParser.cpp  Lexer.cpp  LexerState.cpp  Token.cpp
modules/core/: CMakeLists.txt
modules/core/include/interfaces/: ICommand.hpp  ICommandContext.hpp  ICommandFactory.hpp  IController.hpp  IInputStream.hpp  IMetaCommand.hpp  IOutputStream.hpp  ISerializer.hpp  IShape.hpp  ISlide.hpp  ISlideRepository.hpp  IUndoableCommand.hpp  IView.hpp
modules/io/: CMakeLists.txt
modules/io/include/io/: InputStream.hpp  OutputStream.hpp
modules/io/src/: InputStream.cpp  OutputStream.cpp
modules/model/: CMakeLists.txt
modules/model/include/model/: BoundingBox.hpp  Color.hpp  Slide.hpp  SlideFactory.hpp  SlideRepository.hpp
modules/model/include/model/shapes/: Circle.hpp  Ellipse.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
modules/model/src/: BoundingBox.cpp  Color.cpp  Slide.cpp  SlideFactory.cpp  SlideRepository.cpp
modules/model/src/shapes/: Circle.cpp  Ellipse.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp
modules/serialization/: CMakeLists.txt
modules/serialization/include/serialization/: JsonSerializer.hpp
modules/serialization/src/: JsonSerializer.cpp
modules/view/: CMakeLists.txt
modules/view/include/view/: BrowserOpener.hpp  SvgGenerator.hpp
modules/view/include/view/cli/: CliView.hpp
modules/view/src/: BrowserOpener.cpp  SvgGenerator.cpp
modules/view/src/cli/: CliView.cpp
src/: CommandFactory.cpp  main.cpp
src/commands/: Commands.cpp
src/core/: Shape.cpp  Slide.cpp  SlideFactory.cpp  SlideRepository.cpp
src/parser/: Lexer.cpp  Parser.cpp  Tokenizer.cpp
src/serialization/: JsonSerializer.cpp
tests/: CMakeLists.txt
tests/controller/: CommandContextTest.cpp  CommandHistoryTest.cpp  CommandRegistoryTest.cpp  CommandsTest.cpp  MetaCommandTest.cpp
tests/controller/parser/: CommandParserTest.cpp  LexerTest.cpp  TokenTest.cpp
tests/core/: ColorTest.cpp
tests/integration/: EndToEndTest.cpp
tests/io/: InputStreamTest.cpp  OuptutStreamTest.cpp  OutputStreamTest.cpp
tests/model/: ShapeTest.cpp  SlideFactoryTest.cpp  SlideRepositoryTest.cpp  SlideTest.cpp
tests/serialization/: JsonSerializerTest.cpp
tests/view/: CLIViewTest.cpp  CliViewTest.cpp  SvgGeneratorTest.cpp
